# ytstenut__ytstenut-glib

./: .gitignore  Android.mk  Makefile.am  README  TODO  autogen.sh  configure.ac  git.mk  ytstenut-1-uninstalled.pc.in  ytstenut.pc.in
docs/reference/: Makefile.am
docs/reference/ytstenut/: Makefile.am  ytstenut-docs.xml.in  ytstenut-sections.txt
docs/reference/ytstenut-glib/: Makefile.am  ytstenut-glib-docs.xml.in  ytstenut-glib-sections.txt
examples/: Makefile.am  dictionary-message.c  echo.c  file-transfer.c  invocation-message.c  status.c
examples/video-profile/: Makefile.am  mock-player.c  mock-player.h  player.c  remote.c
examples/video-service/: Makefile.am  player.c  remote.c
tests/: Makefile.am  file-transfer.c  local-connection.c  message-send.c  message.c  metadata-service.c  status-set.c  status.c
ytstenut/: Makefile.am  empathy-tp-file.c  marshal.list  yts-adapter-factory.c  yts-adapter-factory.h  yts-capability-status.c  yts-capability-status.h  yts-capability.c  yts-capability.h  yts-caps.h  yts-client-internal.h  yts-client-status.c  yts-client-status.h  yts-client.c  yts-client.h  yts-contact-impl.c  yts-contact-impl.h  yts-contact-internal.h  yts-contact.c  yts-contact.h  yts-debug.h  yts-enum-types.c.in  yts-enum-types.h.in  yts-error-message.c  yts-error-message.h  yts-error.c  yts-error.h  yts-event-message.c  yts-event-message.h  yts-factory.c  yts-factory.h  yts-file-transfer.c  yts-file-transfer.h  yts-incoming-file-internal.h  yts-incoming-file.c  yts-incoming-file.h  yts-invocation-message.c  yts-invocation-message.h  yts-main.c  yts-main.h  (+84 more)
ytstenut-glib/: Makefile.am  empathy-tp-file.c  empathy-tp-file.h  marshal.list  ytsg-capability-status.h  ytsg-capability.c  ytsg-capability.h  ytsg-caps.h  ytsg-client.c  ytsg-client.h  ytsg-contact.c  ytsg-contact.h  ytsg-debug.h  ytsg-error-message.h  ytsg-error.c  ytsg-error.h  ytsg-event-message.h  ytsg-invocation-message.c  ytsg-invocation-message.h  ytsg-invocation-response.c  ytsg-invocation-response.h  ytsg-main.c  ytsg-main.h  ytsg-message.c  ytsg-message.h  ytsg-metadata-service.c  ytsg-metadata-service.h  ytsg-metadata.c  ytsg-metadata.h  ytsg-private.h  ytsg-profile-adapter.c  ytsg-profile.c  ytsg-profile.h  ytsg-proxy-service.c  ytsg-proxy-service.h  ytsg-proxy.c  ytsg-proxy.h  ytsg-response-message.c  ytsg-response-message.h  ytsg-roster.c  (+27 more)
ytstenut-glib/profile/: ytsg-profile-adapter.c  ytsg-profile-adapter.h  ytsg-profile-impl.c  ytsg-profile-impl.h  ytsg-profile-proxy.c  ytsg-profile-proxy.h  ytsg-profile.c  ytsg-profile.h
ytstenut-glib/video-profile/: ytsg-vp-content.c  ytsg-vp-content.h  ytsg-vp-playable-proxy.c  ytsg-vp-playable-proxy.h  ytsg-vp-playable.c  ytsg-vp-playable.h  ytsg-vp-player-adapter.c  ytsg-vp-player-adapter.h  ytsg-vp-player-proxy.c  ytsg-vp-player-proxy.h  ytsg-vp-player.c  ytsg-vp-player.h  ytsg-vp-query.c  ytsg-vp-query.h  ytsg-vp-transcript-adapter.c  ytsg-vp-transcript-adapter.h  ytsg-vp-transcript-proxy.c  ytsg-vp-transcript-proxy.h  ytsg-vp-transcript.c  ytsg-vp-transcript.h  ytsg-vp-transfer.c  ytsg-vp-transfer.h  ytsg-vp-transmission.c  ytsg-vp-transmission.h
ytstenut-glib/video-service/: ytsg-vs-content.c  ytsg-vs-content.h  ytsg-vs-playable-proxy.c  ytsg-vs-playable.c  ytsg-vs-playable.h  ytsg-vs-player-adapter.c  ytsg-vs-player-adapter.h  ytsg-vs-player-proxy.c  ytsg-vs-player-proxy.h  ytsg-vs-player.c  ytsg-vs-player.h  ytsg-vs-query.c  ytsg-vs-query.h  ytsg-vs-transcript.c  ytsg-vs-transcript.h  ytsg-vs-transfer.c  ytsg-vs-transfer.h  ytsg-vs-transmission.c
ytstenut/profile/: yts-profile-adapter.c  yts-profile-adapter.h  yts-profile-impl.c  yts-profile-impl.h  yts-profile-proxy.c  yts-profile-proxy.h  yts-profile.c  yts-profile.h  ytsg-profile-adapter.c  ytsg-profile-adapter.h  ytsg-profile-impl.c  ytsg-profile-impl.h  ytsg-profile-proxy.h
ytstenut/video-profile/: yts-vp-content.c  yts-vp-content.h  yts-vp-playable-proxy.c  yts-vp-playable-proxy.h  yts-vp-playable.c  yts-vp-playable.h  yts-vp-player-adapter.c  yts-vp-player-adapter.h  yts-vp-player-proxy.c  yts-vp-player-proxy.h  yts-vp-player.c  yts-vp-player.h  yts-vp-query.c  yts-vp-query.h  yts-vp-transcript-adapter.c  yts-vp-transcript-adapter.h  yts-vp-transcript-proxy.c  yts-vp-transcript-proxy.h  yts-vp-transcript.c  yts-vp-transcript.h  yts-vp-transfer.c  yts-vp-transfer.h  yts-vp-transmission.c  yts-vp-transmission.h  ytsg-vp-content.c  ytsg-vp-content.h  ytsg-vp-playable-proxy.c  ytsg-vp-player-proxy.c  ytsg-vp-player-proxy.h  ytsg-vp-player.h  ytsg-vp-query.c  ytsg-vp-query.h  ytsg-vp-transcript-proxy.c  ytsg-vp-transcript-proxy.h  ytsg-vp-transfer.h  ytsg-vp-transmission.c
